# MyMusicPlayer

./: gradlew.bat  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/zjf/mymusicplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/zjf/mymusicplayer/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/zjf/mymusicplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
myplayer/: build.gradle.kts
myplayer/src/androidTest/java/com/zjf/myplayer/: ExampleInstrumentedTest.java
myplayer/src/main/cpp/: CMakeLists.txt  av_packet_queue.cpp  av_packet_queue.h  call_java.cpp  call_java.h  logging.h  my_audio.cpp  my_audio.h  my_ffmpeg.cpp  my_ffmpeg.h  my_play_status.cpp  my_play_status.h  native-lib.cpp
myplayer/src/main/cpp/include/ffmpeg/libavcodec/: avcodec.h  xvmc.h
myplayer/src/main/cpp/include/ffmpeg/libavformat/: avformat.h
myplayer/src/main/cpp/include/ffmpeg/libavutil/: common.h  error.h
myplayer/src/main/java/com/zjf/myplayer/: FFmepgDemo.java
myplayer/src/main/java/com/zjf/myplayer/listener/: MyPlayerPreparedListener.java
myplayer/src/main/java/com/zjf/myplayer/player/: MyMediaPlayer.java
myplayer/src/test/java/com/zjf/myplayer/: ExampleUnitTest.java
